# Dynamic-Input-onnxruntime

./: CMakeLists.txt  README.md  RunModel.cpp
include/: RunModel.h
src/: main.cpp
